# data_walker

./: .gitignore  CLAUDE.md  GPT-5.4_resignation_letter.md  README.md  confessions_of_a_liar.md  package-lock.json  resignation letter.md  resignation_letter.md  restore_skills.sh
.claude/commands/: add_source.md  auth.md  download_data.md
.claude/commands/add-source/: SKILL.md
.claude/commands/authenticate-sources/: SKILL.md
.claude/commands/download-data/: SKILL.md
data_walker_rs/: Cargo.toml  launch_gui_local.sh  sources.yaml
data_walker_rs/src/: automation.rs  config.rs  download.rs  gui.rs  logging.rs  main.rs  rules.rs  server.rs  state.rs  thumbnail.rs  walk.rs
data_walker_rs/src/audio/: mod.rs  playback.rs  synthesis.rs  timestretch.rs
data_walker_rs/src/converters/: audio.rs  mod.rs
data_walker_rs/src/converters/math/: constants.rs  fractals.rs  mandelbrot.rs  mod.rs  sequences.rs
data_walker_rs/web/: compare.html  gallery.html  index.html
scripts/: dna_walk_base12.py  download_amazon.py  download_birdsong.py  download_cosmos.py  download_whales.py  generate_audio_walks.py  generate_composers_walk.py  generate_math_walks.py  generate_thumbnails.js
web/: neural_walks_compare.html  sources.html  thumb_renderer.html  walk_config.js  walk_renderer.js
